// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display headers 1`] = `
<Fragment>
  <ModelTableHeaders
    className=""
    lockFirstColumn={false}
    modelFields={
      Array [
        Object {
          "error": "A supplier must be selected",
          "fieldName": "supplier",
          "header": "Supplier",
          "required": true,
          "synonyms": Array [
            "supplier",
          ],
          "type": "supplier",
        },
        Object {
          "displaySize": 10,
          "fieldName": "product_code",
          "header": "Product Code",
          "maxLength": 30,
          "synonyms": Array [
            "product_code",
          ],
          "type": "text",
        },
        Object {
          "displaySize": 10,
          "fieldName": "fitted_price",
          "header": "Fitted Price",
          "maxLength": 10,
          "synonyms": Array [],
          "type": "currency",
        },
        Object {
          "displaySize": 6,
          "fieldName": "ticket_price",
          "header": "Ticket Price",
          "maxLength": 10,
          "synonyms": Array [],
          "type": "currency",
        },
        Object {
          "displaySize": 5,
          "fieldName": "trade_price",
          "header": "Trade Price £",
          "maxLength": 10,
          "type": "currency",
        },
        Object {
          "fieldName": "check_date",
          "header": "Date Checked",
          "readOnly": true,
          "type": "date_time",
        },
        Object {
          "fieldName": "upd_by",
          "header": "Updater",
          "readOnly": true,
          "type": "user",
        },
      ]
    }
  />
</Fragment>
`;

exports[`should display headers with locking, error and an extra class 1`] = `
<Fragment>
  <ModelTableHeaders
    className="pink"
    lockFirstColumn={true}
    modelFields={
      Array [
        Object {
          "error": "A supplier must be selected",
          "fieldName": "supplier",
          "header": "Supplier",
          "required": true,
          "synonyms": Array [
            "supplier",
          ],
          "type": "supplier",
        },
        Object {
          "displaySize": 10,
          "fieldName": "product_code",
          "header": "Product Code",
          "maxLength": 30,
          "synonyms": Array [
            "product_code",
          ],
          "type": "text",
        },
        Object {
          "displaySize": 10,
          "fieldName": "fitted_price",
          "header": "Fitted Price",
          "maxLength": 10,
          "synonyms": Array [],
          "type": "currency",
        },
        Object {
          "displaySize": 6,
          "fieldName": "ticket_price",
          "header": "Ticket Price",
          "maxLength": 10,
          "synonyms": Array [],
          "type": "currency",
        },
        Object {
          "displaySize": 5,
          "fieldName": "trade_price",
          "header": "Trade Price £",
          "maxLength": 10,
          "type": "currency",
        },
        Object {
          "fieldName": "check_date",
          "header": "Date Checked",
          "readOnly": true,
          "type": "date_time",
        },
        Object {
          "fieldName": "upd_by",
          "header": "Updater",
          "readOnly": true,
          "type": "user",
        },
      ]
    }
  />
  <AdditionalHeader
    className="pink"
    headerText="Errors"
    lockedColumn={false}
  />
</Fragment>
`;
